# ContentVerseSei

./: .env  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src/components/: Navbar.tsx
src/context/: WalletContext.tsx
src/contracts/: Cargo.toml  content_registry.rs
src/pages/: ContentView.tsx  Home.tsx  Upload.tsx
src/services/: ipfs.ts  storage.ts  translation.ts
