[package]
name = "content-registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
cw-storage-plus = "1.0"
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.1"